# r1999-TrackerApp

./: .gitignore  NOTICE.md  README.md  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/lonelytragedy/r1999trackerapp/: BannerAlarmReceiver.kt  BannerScheduler.kt  BannerWidgetFactory.kt  BannerWidgetProvider.kt  BannerWidgetService.kt  BootReceiver.kt  Bus.kt  CertFactory.kt  MainActivity.kt  MitmProxy.kt  NetUtil.kt  ProxyService.kt
app/src/main/java/tun/proxy/service/: Tun2HttpVpnService.kt
app/src/main/java/tun/utils/: Util.kt
app/src/main/res/color/: nav_item.xml
app/src/main/res/drawable/: badge_character.xml  badge_collab.xml  badge_default.xml  badge_limited.xml  badge_regular.xml  badge_special.xml  badge_water.xml  ic_launcher.xml  ic_launcher_fg.xml  ic_tab_grabber.xml  ic_tab_tracker.xml  ic_widget_diamond.xml  ic_widget_star.xml  nav_bg.xml  widget_art_fallback_bg.xml  widget_art_scrim.xml  widget_bg.xml  widget_card_bg.xml  widget_divider.xml  widget_flourish.xml  widget_item_bg.xml  widget_item_bg_upcoming.xml  widget_plus_bg.xml
app/src/main/res/layout/: activity_main.xml  widget_banner.xml  widget_banner_item.xml
app/src/main/res/menu/: bottom_nav.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: banner_widget_info.xml  file_paths.xml
